# csv-mmap-caching

./: .gitignore  README.md  csv-mmap-caching.cabal  results.org  stack.yaml
app/: Main.hs
